Tailwind build from within Toast project

--- a/src/Blazored.Toast/Blazored.Toast.csproj
+++ b/src/Blazored.Toast/Blazored.Toast.csproj
@@ -42,4 +42,12 @@
     <None Include="bundleconfig.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="npm run buildcss" />
+  </Target>
+
 </Project>
