--- a/src/Blazored.Toast/package.json
+++ b/src/Blazored.Toast/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "cssnano": "^5.0.4",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.1.2"
