--- a/samples/BlazorWebAssembly/BlazorWebAssembly.csproj
+++ b/samples/BlazorWebAssembly/BlazorWebAssembly.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Blazored.Toast\Blazored.Toast.csproj" />
+    <ProjectReference Include="..\..\src\BlazorTailwindToast\BlazorTailwindToast.csproj" />
   </ItemGroup>
 
   <ItemGroup>
