--- a/src/BlazorTailwindToast/BlazorTailwindToast.csproj
+++ b/src/BlazorTailwindToast/BlazorTailwindToast.csproj
@@ -30,22 +30,34 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="bundleconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.447" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.6" />
   </ItemGroup>
 
+  <!--
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <None Include="icon.png">
       <Pack>True</Pack>
-      <PackagePath></PackagePath>
+      <PackagePath>\</PackagePath>
     </None>
+    <None Include="bundleconfig.json" />
   </ItemGroup>
+
+  <!--<ItemGroup>
+    <Content Update="wwwroot\css\app.min.css">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>-->
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="npm run buildcss" />
