--- a/src/BlazorTailwindToast/BlazorTailwindToast.csproj
+++ b/src/BlazorTailwindToast/BlazorTailwindToast.csproj
@@ -27,6 +27,8 @@
     <Product>ChrisMingay.BlazorTailwindToast</Product>
     <PackageIconUrl />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
