--- a/src/BlazorTailwindToast/BlazorTailwindToast.csproj
+++ b/src/BlazorTailwindToast/BlazorTailwindToast.csproj
@@ -28,7 +28,8 @@
     <PackageIconUrl />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+    <PackageReleaseNotes>Fix the zindex of the toaster elements</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
