--- a/src/BlazorTailwindToast/BlazorTailwindToast.csproj
+++ b/src/BlazorTailwindToast/BlazorTailwindToast.csproj
@@ -28,8 +28,8 @@
     <PackageIconUrl />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
-    <Version>1.0.3</Version>
-    <PackageReleaseNotes>Fix the zindex of the toaster elements</PackageReleaseNotes>
+    <Version>1.1.0</Version>
+    <PackageReleaseNotes>Add full width header and footer banner toast options</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
